--- a/MondainRefactorTests/MondainRefactorTests.csproj
+++ b/MondainRefactorTests/MondainRefactorTests.csproj
@@ -62,6 +62,9 @@
       <Name>MondainRefactor</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\TestLexicon.txt" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
