New class, QuizProcess ProcessQuestion and UpdateTotalSolutionsLabelWhenCorrect to QuizProcess with ref arguments Variable name/style/assignment tweaks in codebehind

--- a/MondainDeploy/MondainRefactor.csproj
+++ b/MondainDeploy/MondainRefactor.csproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <Compile Include="App_Code\Constants.cs" />
     <Compile Include="App_Code\MondainUI.cs" />
+    <Compile Include="App_Code\QuizProcess.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
