--- a/MondainRefactorTests/MondainRefactorTests.csproj
+++ b/MondainRefactorTests/MondainRefactorTests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="App_Code\FullLexiconTests.cs" />
     <Compile Include="App_Code\LexTableWrapperTests.cs" />
     <Compile Include="App_Code\MondainUITests.cs" />
+    <Compile Include="App_Code\QuizProcessTests.cs" />
     <Compile Include="App_Code\QuizTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
